== 27/Mar/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b81.zip V1.6-b81]  ==

''' Scripts '''

Added a simple way to test how long since an item has been updated, minutesSinceChanged

{{{

   try {
		if (elife.isOff  ("HOLIDAY_MODE")   && elife.isOn  ("MASTER_BED_LIGHT")) {
			if (minutesSinceChanged("MASTER_BED_PIR")  > autoLightOffInterval) {
				elife.sendCommand("MASTER_BED_LIGHT","off")		
			}
		}
   } catch (ValueNotUpdatedException ex){
	   // If the MASTER_BED_LIGHT or MASTER_BED_PIR are not configured in the system, the try/catch will ensure an error does not occur.
	   elife.log ("The auto light off script is looking for an item that has not been configured. " + ex.getMessage());
   }
   
}}}

Implemented enhancement [ticket:712]

''' CBUS '''

Possible fix for CBUS thread exception. Resolves [ticket:713]

Tuned logging level to remove excess slider pulse messages

''' Tutondo '''

Improved logging to try to determine what is causing unresponsiveness for some devices [ticket:695]

''' General '''

Improved logging of unknown commands on the central queue. 

''' GC100 '''

Added logging if a serial overflow has occurred. May assist ticket [ticket:695]

== 26/Feb/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b80.zip V1.6-b80]   [attachment:wiki:SoftwareReleases:eLife-1.6b80-libs.zip Libs-V1.6b80] ==

''' Macros + Scripts '''

Resolved issue where script and macro list were not sent on client connection. Ticket [ticket:710]

''' General '''

Added extra functionality to ensure thread safety on multi-core / multi processor machines with JDK 5 (dev environments).
Updated JDOM to new version, bug fixes for XML parsing.

== 26/Feb/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b79.zip V1.6-b79]   ==

''' Macros '''

Rectified a problem that macros were no longer being sent to the client on system startup.
Resolves an issue which could cause various macro functions to crash. Resolves issue [ticket:708]

''' Scripts '''
